# xrun

./: meson.build
src/: byte.hpp  channel.hpp  client.cpp  client.hpp  error.cpp  error.hpp  fd.hpp  main.cpp  meson.build  process.cpp  process.hpp  protocol.hpp  server-private.hpp  server-server.cpp  server-server.hpp  server-worker.cpp  server-worker.hpp  server.cpp  server.hpp  sock.cpp  sock.hpp  socket.cpp  socket.hpp  thread.hpp  xrun.cpp  xrun.hpp
src/xrun/: main.cpp  meson.build
src/xserver/: arg.cpp  arg.hpp  main.cpp  meson.build  server.cpp  server.hpp  worker.cpp  worker.hpp
src/xworker/: arg.cpp  arg.hpp  main.cpp  meson.build  process.cpp  process.hpp  worker.cpp  worker.hpp  workers.cpp  workers.hpp
